# protein-secondary-structure-prediction-dl

./: .gitignore  README.md  launch.sh  main.py  pyproject.toml
results/ckpts/: cullpdb_filtered_simple1dcnn.pt  cullpdb_simple1dcnn.pt
results/distrib/: cullpdb_filtered_weights.pt  cullpdb_weights.pt
results/logs/: cullpdb_customcnn.txt  cullpdb_filtered_customcnn.txt  cullpdb_filtered_simple1dcnn.txt  cullpdb_simple1dcnn.txt
results/test/: cullpdb_customcnn_alignment.txt  cullpdb_customcnn_report.txt  cullpdb_filtered_customcnn_alignment.txt  cullpdb_filtered_customcnn_report.txt  cullpdb_filtered_simple1dcnn_alignment.txt  cullpdb_filtered_simple1dcnn_report.txt  cullpdb_simple1dcnn_alignment.txt  cullpdb_simple1dcnn_report.txt
scripts/: customcnn.py  datasets.py  models.py  simplecnn.py  test.py  train.py  trainer.py  utils.py
scripts/config/: cullpdb_customcnn.yaml  cullpdb_filtered_customcnn.yaml  cullpdb_filtered_simple1dcnn.yaml  cullpdb_simple1dcnn.yaml
tests/: test_datasets.py  test_model.py
